# milvus

./: CONTRIBUTING.md  Makefile
.github/: mergify.yml
cmd/roles/: roles.go
configs/: milvus.yaml
docs/design-docs/: .gitignore  CONTRIBUTING.md  MEP-TEMPLATE.md  OWNERS  README.md
docs/design_docs/segcore/: scripts_and_tools.md
internal/allocator/: global_id_test.go
internal/core/: CMakeLists.txt
internal/core/src/exec/: CMakeLists.txt
internal/core/src/exec/expression/: Element.h  ElementExtraTest.cpp  ElementTest.cpp  TermExpr.cpp
internal/datacoord/: channel_store.go  coordinator_broker.go  errors.go  handler.go  meta.go  server.go  services.go
internal/datanode/: data_node.go  data_sync_service_test.go  errors.go  flow_graph_dd_node.go  flow_graph_insert_buffer_node.go
internal/distributed/: connection_manager_test.go
internal/indexcoord/: errors.go  index_coord.go  index_coord_mock.go  index_coord_test.go  meta_table_test.go  metrics_info_test.go
internal/indexnode/: errors.go  indexnode.go  indexnode_mock.go
internal/msgstream/: mq_msgstream.go
internal/proxy/: impl.go  proxy.go  proxy_test.go  task.go  task_test.go
internal/querycoord/: channel_allocator_test.go  cluster_test.go  mock_querynode_server_test.go  query_coord.go  query_coord_test.go  segment_allocator_test.go
internal/querynode/: impl_test.go  mock_test.go  query_collection_test.go  query_node.go  query_node_test.go  task.go  task_test.go
internal/rootcoord/: ddl_ts_lock_manager.go  errors.go  meta_table_test.go  root_coord.go  root_coord_test.go
internal/types/: types.go
scripts/: install_deps_embd.sh
tools/: mgit.py
(+47 files in other folders)
